Prepare for PyPI release

--- a/experiments/divergence_embeddings_attacks.ipynb
+++ b/experiments/divergence_embeddings_attacks.ipynb
@@ -111,7 +111,7 @@
    "outputs": [],
    "source": [
     "# Now, apply the rewriting algorithm to the embeddings with 10% replacement rate\n",
-    "from silver_speak.homoglyphs.random_attack import random_attack\n",
+    "from silverspeak.homoglyphs.random_attack import random_attack\n",
     "\n",
     "attacked_embeddings = []\n",
     "for i in range(len(dataset)):\n",
