--- a/experiments/perplexity_tests.ipynb
+++ b/experiments/perplexity_tests.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "import torch\n",
     "\n",
-    "from silver_speak.utils import (add_fill_tokens, align_two_token_sequences,\n",
+    "from silverspeak.utils import (add_fill_tokens, align_two_token_sequences,\n",
     "                                encode_text, get_different_ranges,\n",
     "                                get_filled_ranges,\n",
     "                                get_loglikelihoods_of_tokens,\n",
@@ -91,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from silver_speak.homoglyphs.random_attack import random_attack\n",
+    "from silverspeak.homoglyphs.random_attack import random_attack\n",
     "# First, we run the attack with 10% replacement percentage\n",
     "attacked_text = random_attack(test_text, percentage=0.1, random_seed=42)\n",
     "\n",
